[[release-notes-5.13.4]]
== 5.13.4

*Date of Release:* ❓

*Scope:* ❓

For a complete list of all _closed_ issues and pull requests for this release, consult the
link:{junit-framework-repo}+/milestone/101?closed=1+[5.13.4] milestone page in the JUnit
repository on GitHub.


[[release-notes-5.13.4-overall-improvements]]
=== Overall Changes

[[release-notes-5.13.4-overall-new-features-and-improvements]]
==== New Features and Improvements

* Remove `java.*` packages from `Import-Package` headers in all jar manifests to maximize
  compatibility with older OSGi runtimes.


[[release-notes-5.13.4-junit-platform]]
=== JUnit Platform

[[release-notes-5.13.4-junit-platform-bug-fixes]]
==== Bug Fixes

* `ClasspathResourceSelector` no longer allows to be constructed with a resource name that
  is blank after removing the leading slash.
* `PackageSource.from(String)` now allows to be constructed with an empty string to
  indicate the default package.

[[release-notes-5.13.4-junit-platform-deprecations-and-breaking-changes]]
==== Deprecations and Breaking Changes

* ❓

[[release-notes-5.13.4-junit-platform-new-features-and-improvements]]
==== New Features and Improvements

* ❓


[[release-notes-5.13.4-junit-jupiter]]
=== JUnit Jupiter

[[release-notes-5.13.4-junit-jupiter-bug-fixes]]
==== Bug Fixes

* ❓

[[release-notes-5.13.4-junit-jupiter-deprecations-and-breaking-changes]]
==== Deprecations and Breaking Changes

* ❓

[[release-notes-5.13.4-junit-jupiter-new-features-and-improvements]]
==== New Features and Improvements

* ❓


[[release-notes-5.13.4-junit-vintage]]
=== JUnit Vintage

[[release-notes-5.13.4-junit-vintage-bug-fixes]]
==== Bug Fixes

* ❓

[[release-notes-5.13.4-junit-vintage-deprecations-and-breaking-changes]]
==== Deprecations and Breaking Changes

* ❓

[[release-notes-5.13.4-junit-vintage-new-features-and-improvements]]
==== New Features and Improvements

* ❓